--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     font-size: 17px;
     position: sticky;
     top: 0;
+    z-index: 1000;
 }
 
 .header_box {
@@ -36,15 +37,23 @@
     align-items: center;
     gap: 30px;
     font-size: 22px;
+
 }
 
 .header_language {
     display: flex;
     align-items: center;
+    justify-self: center;
     font-weight: bold;
+    /* border: 2px solid red; */
+
 }
 
 .header_language_button {
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    text-align: center;
     padding: 2px;
     border: 1px solid transparent;
     font-weight: bold;
@@ -52,13 +61,21 @@
     cursor: pointer;
     background-color: #5F9BCE;
     color: #ffffff;
+    gap: 3px;
+    /* flex-wrap: wrap; */
+}
+
+.header_language img {
+    width: 20px;
 }
 
 
 .header_rightside {
     display: flex;
+    justify-content: end;
     align-items: center;
     gap: 45px;
+    flex-wrap: wrap;
 }
 
 .header_rightside span {
@@ -340,7 +357,6 @@
     gap: 18px;
 }
 
-
 .contacto {
     display: flex;
     flex-direction: column;
@@ -412,4 +428,52 @@
         width: 100%;
         padding: 0px 30px;
     }
+
+    .clinica_box {
+        padding: 50px 30px;
+    }
+
+    .header_rightside {
+        gap: 20px;
+    }
+}
+
+
+@media (max-width: 800px) {
+    .galeria_images img {
+        width: 90%;
+        height: 400px;
+    }
+}
+
+@media (max-width: 700px) {
+    .header_rightside {
+        gap: 10px;
+    }
+
+    .header {
+        font-size: 15px;
+    }
+
+    .header_leftside {
+        gap: 15px;
+        font-size: 18px;
+    }
+
+}
+
+@media (max-width: 600px) {
+    .header_rightside {
+        gap: 5px;
+    }
+
+    .header_leftside {
+        gap: 10px;
+    }
+
+    .galeria_images img {
+        width: 90%;
+        height: 300px;
+    }
+
 }
