--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ a {
     justify-self: center;
     text-align: center;
     flex-direction: column;
-    padding: 2px;
+    padding: 5px 2px;
     border: 1px solid transparent;
     font-weight: bold;
     width: 90px;
