--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ a {
     background-color: #5F9BCE;
     color: #ffffff;
     gap: 3px;
+    border-radius: 0.20cm;
+    box-shadow: 1px 2px 5px 0px gray;
     /* flex-wrap: wrap; */
     /* border: 2px solid red; */
 }
