--- a/style.css
+++ b/style.css
@@ -328,7 +328,8 @@ a {
 
 .appointment_form input:focus,
 .appointment_form textarea:focus,
-.appointment_form button {
+.appointment_form button:focus,
+.appointment_form select:focus {
     border: 1px solid #5F9BCE;
     outline: none;
 }
@@ -336,9 +337,11 @@ a {
 .appointment_form button {
     padding: 15px;
     border: 1px solid gray;
-    background-color: lightgray;
+    background-color: blue;
     border-radius: 0.25cm;
     cursor: pointer;
+    color: #ffffff;
+    font-weight: bold;
 }
 
 .close-btn_div {
@@ -346,7 +349,8 @@ a {
     align-items: center;
     justify-content: center;
     padding: 4px 13px;
-    background-color: #5F9BCE;
+    background-color: blue;
+    color: #ffffff;
     border-radius: 50%;
     font-size: 35px;
     cursor: pointer;
@@ -386,17 +390,17 @@ a {
 .more_services_list button {
     padding: 20px 30px;
     border: 1px solid transparent;
-    background-color: #5F9BCE;
+    background-color: blue;
     font-size: 25px;
     font-weight: bold;
     border-radius: 0.5cm;
     cursor: pointer;
     box-shadow: 1px 1px 5px 0px gray;
+    color: #ffffff;
 }
 
 .more_services_list button:active {
     background-color: darkorange;
-    color: #ffffff;
 }
 
 
